fixed spacing with p

--- a/style.css
+++ b/style.css
@@ -23,12 +23,10 @@ h1 a{
     color: black;
     font-weight: normal;
 }
-
 ul{
     display: flex;
     list-style-type: none;
-    margin: 90px 153px 70px auto; 
-    
+    margin: 90px 153px 70px auto;  
 }
 li{
     padding-left: 50px;
@@ -55,44 +53,6 @@ li a:hover{
     font-size: 16px;
     
 }
-
-.zmee, .MI449{
-    background: var(--img-background-color);
-    width: 1206px;
-    height: 700px;
-    text-align: center;
-    margin: 40px auto 100px auto;
-}
-.zmee p{
-    font-size: 29px;
-
-}   
-.top{
-    font-size: 29px;
-}
-.title{
-    font-size: 29px;
-    padding-top: 45px;
-}
-.zmee a{
-    text-decoration: none;
-    color: black;
-    margin: 45px;
-    
-}
-.zmee img, .MI449 img{
-    margin-top: 80px;
-}
-.zmeeDesc{
-    padding-top: 110px;
-
-    text-align: left;
-}
-.MI449 a{
-    text-decoration: none;
-    color: black;
-}
-
 .about{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -114,7 +74,40 @@ li a:hover{
 .ab{
     font-weight: bolder;
 }
-
+.zmee, .MI449{
+    background: var(--img-background-color);
+    width: 1206px;
+    height: 700px;
+    text-align: center;
+    margin: 40px auto 100px auto;
+}
+.zmee p{
+    font-size: 29px;
+}
+.top{
+    font-size: 29px;
+}
+.title{
+    font-size: 29px;
+    padding-top: 45px;
+}
+.zmee a{
+    text-decoration: none;
+    color: black;
+    margin: 45px;
+    
+}
+.MI449 a{
+    text-decoration: none;
+    color: black;
+}
+.zmee img, .MI449 img{
+    margin-top: 80px;
+}
+.zmeeDesc{
+    padding-top: 25px;
+    text-align: left;
+}
 .note{
     text-align: center;
     align-items: center;
@@ -140,9 +133,6 @@ li a:hover{
     margin: 0 153px 50px 153px ;
     font-size: 20px;
 }
-.WIP{
-    margin-left: 153px;
-}
 .shf{
     margin: 50px 153px 50px 153px ;
 }
@@ -154,30 +144,22 @@ li a:hover{
 .shf .shfimg img{
     margin: 75px 0 75px 0;
 }
-
 .shf p{
     text-align: left;
     font-size: 20px;
 }
-
-
-footer{
-    text-align: center;
-    font-size: 20px;
-    margin-top: 100px;
+.WIP{
+    margin-left: 153px;
 }
 .planetary img{
     width: 658px;
     height: 379px;
 }
 .Assignments{
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(2,1fr);
-    gap: 20px;
-    text-decoration: none;
-    margin: 50px 150px 50px 50px;
 }
-.Assignments h2, p{
+.Assignments h2, .Assignments p{
     text-align: center;
     color: black;
     line-height: 0;
@@ -185,4 +167,8 @@ footer{
 .Assignments a{
     text-decoration: none;
 }
-
+footer{
+    text-align: center;
+    font-size: 20px;
+    margin-top: 100px;
+}
